# steward

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/examples/: basic-usage.ts
bindings/node/src/: lib.rs
bindings/node/tests/: test.js
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: basic_usage.py
bindings/python/python/steward/: __init__.py  steward.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: __init__.py  test_steward.py
contracts/: general.yaml
crates/steward-cli/: Cargo.toml
crates/steward-cli/src/: main.rs
crates/steward-core/: Cargo.toml
crates/steward-core/src/: evidence.rs  lib.rs  synthesizer.rs  types.rs
crates/steward-core/src/contract/: mod.rs  parser.rs  schema.rs
crates/steward-core/src/lenses/: accountability.rs  boundaries.rs  dignity.rs  mod.rs  patterns.rs  restraint.rs  transparency.rs
crates/steward-runtime/: Cargo.toml
crates/steward-runtime/src/: cache.rs  config.rs  lib.rs  orchestrator.rs  prompts.rs  synthesizer.rs
crates/steward-runtime/src/agents/: mod.rs  traits.rs
crates/steward-runtime/src/evidence/: mod.rs  validator.rs
crates/steward-runtime/src/providers/: anthropic.rs  factory.rs  mod.rs  secrets.rs
crates/steward-runtime/src/resilience/: budget.rs  circuit_breaker.rs  fallback.rs  mod.rs
docs/: Steward.md  compliance-mapping.md  steward-blueprint-specs.md
spec/: contract.schema.json  lenses.md  result.schema.json
tests/golden/: dignity-blocked-dismissive.json  dignity-blocked-dismissive.yaml  restraint-blocked-credentials.json  restraint-blocked-credentials.yaml  support-response-blocked-pii.json  support-response-blocked-pii.yaml  support-response-escalate-frustration.json  support-response-escalate-frustration.yaml  support-response-proceed.json  support-response-proceed.yaml  transparency-escalate-uncited.json  transparency-escalate-uncited.yaml
