[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "steward"
version = "0.1.0"
description = "Deterministic stewardship contract evaluation engine"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Patrick Peña - Agenisea AI", email = "patrick@agenisea.ai" }
]
keywords = ["stewardship", "governance", "ai", "evaluation", "contracts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/agenisea/steward"
Documentation = "https://docs.rs/steward"
Repository = "https://github.com/agenisea/steward"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "steward"
