[package]
name = "steward-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic stewardship contract evaluation engine"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
jsonschema.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
lazy_static.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
